// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`covid data All covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measures": Array [
        Object {
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbc9f",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 999,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca0",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca1",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 9,
              "vote": 9,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca2",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": 326,
              "stat": 999,
              "vote": 0,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "id": "5fcfe806f5edde53d72bbca3",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": 326,
              "stat": 999,
              "vote": 0,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca4",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 0,
              "vote": 9,
            },
          ],
          "id": "COV001",
          "name": "measure 1",
        },
        Object {
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca6",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 8,
              "vote": 99,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca7",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 99,
              "vote": 99,
            },
            Object {
              "est_doc": "SEB",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca8",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 9,
              "vote": 9,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbca9",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 9,
              "vote": 0,
            },
            Object {
              "est_doc": "SEC",
              "fiscal_year": "2021",
              "id": "5fcfe806f5edde53d72bbcaa",
              "org": Object {
                "id": "552",
                "name": "Polar Knowledge Canada",
              },
              "org_id": 552,
              "stat": 9,
              "vote": 0,
            },
          ],
          "id": "COV002",
          "name": "measure 2",
        },
        Object {
          "covid_estimates": Array [
            Object {
              "est_doc": "ME",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbcac",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "ME",
              "fiscal_year": "2021",
              "id": "5fcfe806f5edde53d72bbcad",
              "org": Object {
                "id": "133",
                "name": "National Defence",
              },
              "org_id": 133,
              "stat": 0,
              "vote": 9,
            },
            Object {
              "est_doc": "SEA",
              "fiscal_year": "2020",
              "id": "5fcfe806f5edde53d72bbcae",
              "org": Object {
                "id": "326",
                "name": "Treasury Board of Canada Secretariat",
              },
              "org_id": 326,
              "stat": 9,
              "vote": 99,
            },
          ],
          "id": "COV003",
          "name": "measure 3",
        },
      ],
    },
  },
}
`;

exports[`covid data Gov covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "covid_estimates_summary": Array [
          Object {
            "est_doc": "ME",
            "fiscal_year": "2020",
            "id": "5fcfe806f5edde53d72bbcba",
            "stat": 1007,
            "vote": 1107,
          },
          Object {
            "est_doc": "SEA",
            "fiscal_year": "2020",
            "id": "5fcfe806f5edde53d72bbcbb",
            "stat": 108,
            "vote": 207,
          },
          Object {
            "est_doc": "SEB",
            "fiscal_year": "2020",
            "id": "5fcfe806f5edde53d72bbcbc",
            "stat": 18,
            "vote": 27,
          },
          Object {
            "est_doc": "SEC",
            "fiscal_year": "2020",
            "id": "5fcfe806f5edde53d72bbcbd",
            "stat": 9,
            "vote": 0,
          },
          Object {
            "est_doc": "ME",
            "fiscal_year": "2021",
            "id": "5fcfe806f5edde53d72bbcbe",
            "stat": 999,
            "vote": 9,
          },
          Object {
            "est_doc": "SEC",
            "fiscal_year": "2021",
            "id": "5fcfe806f5edde53d72bbcbf",
            "stat": 9,
            "vote": 0,
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org covid estimates summary 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "covid_estimates_summary": Array [
          Object {
            "est_doc": "ME",
            "fiscal_year": "2020",
            "id": "5fcfe806f5edde53d72bbcaf",
            "stat": 8,
            "vote": 1107,
          },
          Object {
            "est_doc": "SEA",
            "fiscal_year": "2020",
            "id": "5fcfe806f5edde53d72bbcb0",
            "stat": 0,
            "vote": 9,
          },
          Object {
            "est_doc": "SEB",
            "fiscal_year": "2020",
            "id": "5fcfe806f5edde53d72bbcb1",
            "stat": 9,
            "vote": 9,
          },
          Object {
            "est_doc": "ME",
            "fiscal_year": "2021",
            "id": "5fcfe806f5edde53d72bbcb2",
            "stat": 0,
            "vote": 9,
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Org covid measures 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "covid_measures": Array [
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "id": "5fcfe806f5edde53d72bbc9f",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 999,
              },
              Object {
                "est_doc": "SEA",
                "fiscal_year": "2020",
                "id": "5fcfe806f5edde53d72bbca0",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "SEB",
                "fiscal_year": "2020",
                "id": "5fcfe806f5edde53d72bbca1",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 9,
                "vote": 9,
              },
            ],
            "id": "COV001",
            "name": "measure 1",
          },
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "id": "5fcfe806f5edde53d72bbca6",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 8,
                "vote": 99,
              },
            ],
            "id": "COV002",
            "name": "measure 2",
          },
          Object {
            "covid_estimates": Array [
              Object {
                "est_doc": "ME",
                "fiscal_year": "2020",
                "id": "5fcfe806f5edde53d72bbcac",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 9,
              },
              Object {
                "est_doc": "ME",
                "fiscal_year": "2021",
                "id": "5fcfe806f5edde53d72bbcad",
                "org": Object {
                  "id": "133",
                  "name": "National Defence",
                },
                "org_id": 133,
                "stat": 0,
                "vote": 9,
              },
            ],
            "id": "COV003",
            "name": "measure 3",
          },
        ],
      },
    },
  },
}
`;

exports[`covid data Specific covid measure 1`] = `
Object {
  "data": Object {
    "root": Object {
      "covid_measure": Object {
        "id": "COV001",
        "name": "measure 1",
      },
    },
  },
}
`;
